// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DXF Snapshot Tests Acrylic Export DXF Snapshots should generate consistent DXF for acrylic material: acrylic-laser.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Etch Lines, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.625, 24.5)
drawRect(6.125, 27.5, 11.25, 24.5)
drawRect(10.125, 26, 10.25, 24.5)
drawRect(7.125, 26, 7.25, 24.5)
drawRect(10.125, 26, 10.25, 24.5)
drawRect(7.125, 26, 7.25, 24.5)
drawRect(11.75, 27.5, 14.875, 24.5)
drawRect(15.375, 27.5, 18.5, 24.5)
drawRect(19, 27.5, 21.875, 24.5)
drawRect(22.375, 27.5, 25.25, 24.5)
drawRect(25.75, 27.5, 28.625, 24.5)
drawRect(27.75, 27.5, 27.875, 26)
drawRect(27.75, 27.5, 27.875, 26)
drawRect(0.5, 24, 3.375, 21)
drawRect(2.5, 24, 2.625, 22.5)
drawRect(2.5, 24, 2.625, 22.5)
setActiveLayer(Etch Lines)
drawText(0.5, NaN, 0.1, 0, 1)
drawLine(0.625, 27.5, 0.625, 24.5)
drawLine(5.5, 27.5, 5.5, 24.5)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.125, NaN, 0.1, 0, 2)
drawLine(6.25, 27.5, 6.25, 24.5)
drawLine(11.125, 27.5, 11.125, 24.5)
drawText(6.125, 27.6, 0.1, 0, 2)
drawText(11.75, NaN, 0.1, 0, 3)
drawLine(11.875, 27.5, 11.875, 24.5)
drawLine(14.75, 27.5, 14.75, 24.5)
drawText(11.75, 27.6, 0.1, 0, 3)
drawText(15.375, NaN, 0.1, 0, 4)
drawLine(15.5, 27.5, 15.5, 24.5)
drawLine(18.375, 27.5, 18.375, 24.5)
drawText(15.375, 27.6, 0.1, 0, 4)
drawText(19, NaN, 0.1, 0, 5)
drawText(19, 27.6, 0.1, 0, 5)
drawText(22.375, NaN, 0.1, 0, 6)
drawText(22.375, 27.6, 0.1, 0, 6)
drawText(25.75, NaN, 0.1, 0, 7)
drawText(25.75, 27.6, 0.1, 0, 7)
drawText(0.5, NaN, 0.1, 0, 8)
drawText(0.5, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests DXF Consistency Tests should generate identical output across multiple runs: consistency-check.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.73, 24.5)
drawRect(0.5, 27.5, 0.72, 26.506666666666668)
drawRect(0.5, 25.493333333333332, 0.72, 24.5)
drawRect(5.510000000000001, 27.5, 5.73, 26.506666666666668)
drawRect(5.510000000000001, 25.493333333333332, 5.73, 24.5)
drawRect(6.23, 27.5, 11.46, 24.5)
drawRect(6.23, 27.5, 6.45, 26.506666666666668)
drawRect(6.23, 25.493333333333332, 6.45, 24.5)
drawRect(11.24, 27.5, 11.46, 26.506666666666668)
drawRect(11.24, 25.493333333333332, 11.46, 24.5)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(11.96, 27.5, 15.190000000000001, 24.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.506666666666668)
drawRect(11.96, 25.493333333333332, 12.180000000000001, 24.5)
drawRect(14.97, 27.5, 15.190000000000001, 26.506666666666668)
drawRect(14.97, 25.493333333333332, 15.190000000000001, 24.5)
drawRect(15.690000000000001, 27.5, 18.92, 24.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.506666666666668)
drawRect(15.690000000000001, 25.493333333333332, 15.910000000000002, 24.5)
drawRect(18.700000000000003, 27.5, 18.92, 26.506666666666668)
drawRect(18.700000000000003, 25.493333333333332, 18.92, 24.5)
drawRect(19.42, 27.5, 22.650000000000002, 24.5)
drawRect(19.42, 26.496666666666666, 19.64, 25.503333333333334)
drawRect(22.430000000000003, 26.496666666666666, 22.650000000000002, 25.503333333333334)
drawRect(23.150000000000002, 27.5, 26.380000000000003, 24.5)
drawRect(23.150000000000002, 26.496666666666666, 23.37, 25.503333333333334)
drawRect(26.160000000000004, 26.496666666666666, 26.380000000000003, 25.503333333333334)
drawRect(0.5, 24, 3.73, 21)
drawRect(0.5, 22.996666666666666, 0.72, 22.003333333333334)
drawRect(3.51, 22.996666666666666, 3.73, 22.003333333333334)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(4.23, 24, 7.460000000000001, 21)
drawRect(4.23, 22.996666666666666, 4.45, 22.003333333333334)
drawRect(7.240000000000001, 22.996666666666666, 7.460000000000001, 22.003333333333334)
drawRect(6.23, 24, 6.460000000000001, 22.5)
drawRect(6.23, 24, 6.460000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, NaN, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, NaN, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, NaN, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, NaN, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, NaN, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, NaN, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, NaN, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, NaN, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with 1 pin/slot configuration: plywood-1-pin-slot.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.73, 24.5)
drawRect(0.5, 25.985, 0.72, 24.490000000000002)
drawRect(5.510000000000001, 25.985, 5.73, 24.490000000000002)
drawRect(6.23, 27.5, 11.46, 24.5)
drawRect(6.23, 25.985, 6.45, 24.490000000000002)
drawRect(11.24, 25.985, 11.46, 24.490000000000002)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(11.96, 27.5, 15.190000000000001, 24.5)
drawRect(11.96, 25.985, 12.180000000000001, 24.490000000000002)
drawRect(14.97, 25.985, 15.190000000000001, 24.490000000000002)
drawRect(15.690000000000001, 27.5, 18.92, 24.5)
drawRect(15.690000000000001, 25.985, 15.910000000000002, 24.490000000000002)
drawRect(18.700000000000003, 25.985, 18.92, 24.490000000000002)
drawRect(19.42, 27.5, 22.650000000000002, 24.5)
drawRect(19.42, 27.5, 19.64, 26.005)
drawRect(22.430000000000003, 27.5, 22.650000000000002, 26.005)
drawRect(23.150000000000002, 27.5, 26.380000000000003, 24.5)
drawRect(23.150000000000002, 27.5, 23.37, 26.005)
drawRect(26.160000000000004, 27.5, 26.380000000000003, 26.005)
drawRect(0.5, 24, 3.73, 21)
drawRect(0.5, 24, 0.72, 22.505)
drawRect(3.51, 24, 3.73, 22.505)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(4.23, 24, 7.460000000000001, 21)
drawRect(4.23, 24, 4.45, 22.505)
drawRect(7.240000000000001, 24, 7.460000000000001, 22.505)
drawRect(6.23, 24, 6.460000000000001, 22.5)
drawRect(6.23, 24, 6.460000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, NaN, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, NaN, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, NaN, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, NaN, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, NaN, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, NaN, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, NaN, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, NaN, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with 2 pin/slot configuration: plywood-2-pin-slots.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.73, 24.5)
drawRect(0.5, 27.5, 0.72, 26.506666666666668)
drawRect(0.5, 25.493333333333332, 0.72, 24.5)
drawRect(5.510000000000001, 27.5, 5.73, 26.506666666666668)
drawRect(5.510000000000001, 25.493333333333332, 5.73, 24.5)
drawRect(6.23, 27.5, 11.46, 24.5)
drawRect(6.23, 27.5, 6.45, 26.506666666666668)
drawRect(6.23, 25.493333333333332, 6.45, 24.5)
drawRect(11.24, 27.5, 11.46, 26.506666666666668)
drawRect(11.24, 25.493333333333332, 11.46, 24.5)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(10.23, 26, 10.46, 24.5)
drawRect(7.23, 26, 7.460000000000001, 24.5)
drawRect(11.96, 27.5, 15.190000000000001, 24.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.506666666666668)
drawRect(11.96, 25.493333333333332, 12.180000000000001, 24.5)
drawRect(14.97, 27.5, 15.190000000000001, 26.506666666666668)
drawRect(14.97, 25.493333333333332, 15.190000000000001, 24.5)
drawRect(15.690000000000001, 27.5, 18.92, 24.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.506666666666668)
drawRect(15.690000000000001, 25.493333333333332, 15.910000000000002, 24.5)
drawRect(18.700000000000003, 27.5, 18.92, 26.506666666666668)
drawRect(18.700000000000003, 25.493333333333332, 18.92, 24.5)
drawRect(19.42, 27.5, 22.650000000000002, 24.5)
drawRect(19.42, 26.496666666666666, 19.64, 25.503333333333334)
drawRect(22.430000000000003, 26.496666666666666, 22.650000000000002, 25.503333333333334)
drawRect(23.150000000000002, 27.5, 26.380000000000003, 24.5)
drawRect(23.150000000000002, 26.496666666666666, 23.37, 25.503333333333334)
drawRect(26.160000000000004, 26.496666666666666, 26.380000000000003, 25.503333333333334)
drawRect(0.5, 24, 3.73, 21)
drawRect(0.5, 22.996666666666666, 0.72, 22.003333333333334)
drawRect(3.51, 22.996666666666666, 3.73, 22.003333333333334)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(2.5, 24, 2.73, 22.5)
drawRect(4.23, 24, 7.460000000000001, 21)
drawRect(4.23, 22.996666666666666, 4.45, 22.003333333333334)
drawRect(7.240000000000001, 22.996666666666666, 7.460000000000001, 22.003333333333334)
drawRect(6.23, 24, 6.460000000000001, 22.5)
drawRect(6.23, 24, 6.460000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, NaN, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, NaN, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, NaN, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, NaN, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, NaN, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, NaN, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, NaN, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, NaN, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with different case depth: plywood-case-depth-4.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.73, 23.5)
drawRect(0.5, 27.5, 0.72, 26.173333333333332)
drawRect(0.5, 24.826666666666668, 0.72, 23.5)
drawRect(5.510000000000001, 27.5, 5.73, 26.173333333333332)
drawRect(5.510000000000001, 24.826666666666668, 5.73, 23.5)
drawRect(6.23, 27.5, 11.46, 23.5)
drawRect(6.23, 27.5, 6.45, 26.173333333333332)
drawRect(6.23, 24.826666666666668, 6.45, 23.5)
drawRect(11.24, 27.5, 11.46, 26.173333333333332)
drawRect(11.24, 24.826666666666668, 11.46, 23.5)
drawRect(10.23, 25.5, 10.46, 23.5)
drawRect(7.23, 25.5, 7.460000000000001, 23.5)
drawRect(10.23, 25.5, 10.46, 23.5)
drawRect(7.23, 25.5, 7.460000000000001, 23.5)
drawRect(11.96, 27.5, 15.190000000000001, 23.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.173333333333332)
drawRect(11.96, 24.826666666666668, 12.180000000000001, 23.5)
drawRect(14.97, 27.5, 15.190000000000001, 26.173333333333332)
drawRect(14.97, 24.826666666666668, 15.190000000000001, 23.5)
drawRect(15.690000000000001, 27.5, 18.92, 23.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.173333333333332)
drawRect(15.690000000000001, 24.826666666666668, 15.910000000000002, 23.5)
drawRect(18.700000000000003, 27.5, 18.92, 26.173333333333332)
drawRect(18.700000000000003, 24.826666666666668, 18.92, 23.5)
drawRect(19.42, 27.5, 22.650000000000002, 23.5)
drawRect(19.42, 26.163333333333334, 19.64, 24.836666666666666)
drawRect(22.430000000000003, 26.163333333333334, 22.650000000000002, 24.836666666666666)
drawRect(23.150000000000002, 27.5, 26.380000000000003, 23.5)
drawRect(23.150000000000002, 26.163333333333334, 23.37, 24.836666666666666)
drawRect(26.160000000000004, 26.163333333333334, 26.380000000000003, 24.836666666666666)
drawRect(0.5, 23, 3.73, 19)
drawRect(0.5, 21.663333333333334, 0.72, 20.336666666666666)
drawRect(3.51, 21.663333333333334, 3.73, 20.336666666666666)
drawRect(2.5, 23, 2.73, 21)
drawRect(2.5, 23, 2.73, 21)
drawRect(4.23, 23, 7.460000000000001, 19)
drawRect(4.23, 21.663333333333334, 4.45, 20.336666666666666)
drawRect(7.240000000000001, 21.663333333333334, 7.460000000000001, 20.336666666666666)
drawRect(6.23, 23, 6.460000000000001, 21)
drawRect(6.23, 23, 6.460000000000001, 21)
setActiveLayer(Labels)
drawText(0.5, NaN, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, NaN, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, NaN, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, NaN, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, NaN, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, NaN, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, NaN, 0.1, 0, 7)
drawText(0.5, 23.1, 0.1, 0, 7)
drawText(4.23, NaN, 0.1, 0, 8)
drawText(4.23, 23.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;
